# cc-prog-management

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  PRESENTATION.md  README.md  camp.db  challenges.csv  completions.csv  credentials.txt  fly.toml  generate_mock_csv.py  generate_terrains.py  generate_test_reservations.py  init_db.py  kml_to_terreni.py  pattuglie.csv  prenotazioni.csv  pyproject.toml  reset_db.py  terreni.csv  test.db  test_uat.db  units.csv
.github/workflows/: cd.yml  ci.yml
app/: auth.py  database.py  email_service.py  main.py  models.py
app/routers/: admin.py  public.py
app/services/: backup_service.py
app/static/: manifest.json  sw.js
app/templates/: admin.html  admin_challenges.html  admin_dashboard.html  admin_pattuglie.html  admin_terreni.html  admin_users.html  base.html  edit_challenge.html  edit_pattuglia.html  edit_terreno.html  gestione_terreni.html  input.html  login.html  password_reset_confirm.html  password_reset_request.html  prenotazioni.html  ranking.html  support.html  timeline.html
app/utils/: init_db.py
data/seed/: inventario_terreni.kml  pattuglie.csv  sfide.csv  terreni.csv
doc/: APP_SUMMARY.md  BUSINESS_CONTEXT.md  CHALLENGE_RANKING.md  DEPLOY.md  LOGIN_DB_MANAGEMENT.md  PRESENTATION.md  TERRAIN_RESERVATION.md
tests/: conftest.py  test_admin_basic.py  test_admin_pattuglie.py  test_admin_users.py  test_auth.py  test_coverage_backup.py  test_coverage_core.py  test_coverage_endpoints.py  test_coverage_main.py  test_coverage_routes.py  test_email_service.py  test_main.py  test_main_auth_flows.py  test_models.py  test_public.py  test_support.py  test_terrain_map.py  test_terreni.py
tests/e2e/: conftest.py  test_admin_and_staff_flows.py  test_happy_path.py
