[project]
name = "scout-camp-ranking"
version = "0.1.0"
description = "Scout Camp Ranking App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.6.1",
    "email-validator>=2.2.0",
    "itsdangerous>=2.2.0",
    "python-jose>=3.5.0",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pyright>=1.1.389",
    "httpx>=0.27.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
