[project]
name = "scout-camp-ranking"
version = "0.1.0"
description = "Scout Camp Ranking App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.5.0",
    "argon2-cffi>=25.1.0",
]

[tool.deptry]
ignore = ["DEP002"]

[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn", "jinja2", "python-multipart", "argon2-cffi"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pyright>=1.1.389",
    "httpx>=0.27.2",
    "deptry>=0.21.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
