[project]
name = "scout-camp-ranking"
version = "0.1.0"
description = "Scout Camp Ranking App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.5.0",
    "argon2-cffi>=25.1.0",
    "openpyxl>=3.1.5",
]

[tool.deptry]
ignore = ["DEP002"]

[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn", "jinja2", "python-multipart", "argon2-cffi"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.4",
    "pyright>=1.1.389",
    "httpx>=0.27.2",
    "deptry>=0.21.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "pytest-playwright>=0.7.2",
    "playwright>=1.58.0",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-fail-under=100 --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "init_db.py",
    "data/seed/*",
    "app/routers/admin.py",
    "app/routers/public.py",
    "app/email_service.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "if not ws:",
]
